<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout style="@style/fragment_accomplish_relativeLayout">

            <TextView
                android:id="@+id/textView6"
                style="@style/fragment_accomplish_textview_right"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <TextView
                style="@style/fragment_accomplish_textview_left"
                android:text="@string/bkname" />
        </RelativeLayout>

        <RelativeLayout style="@style/fragment_accomplish_relativeLayout">

            <TextView
                android:id="@+id/textView8"
                style="@style/fragment_accomplish_textview_right"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <TextView
                style="@style/fragment_accomplish_textview_left"
                android:text="@string/datishu" />
        </RelativeLayout>

        <RelativeLayout style="@style/fragment_accomplish_relativeLayout">

            <TextView
                android:id="@+id/textView10"
                style="@style/fragment_accomplish_textview_right"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <TextView
                style="@style/fragment_accomplish_textview_left"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/you" />
        </RelativeLayout>

        <RelativeLayout style="@style/fragment_accomplish_relativeLayout">

            <TextView
                android:id="@+id/textView12"
                style="@style/fragment_accomplish_textview_right"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <TextView
                style="@style/fragment_accomplish_textview_left"
                android:text="@string/liang" />
        </RelativeLayout>

        <RelativeLayout style="@style/fragment_accomplish_relativeLayout">

            <TextView
                android:id="@+id/textView14"
                style="@style/fragment_accomplish_textview_right"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <TextView
                style="@style/fragment_accomplish_textview_left"
                android:text="@string/cha" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_no"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="18dp"
            android:text="@string/shifou"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_tv_btn1"
            android:text="@string/tongguo"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_yes"
            android:layout_alignBottom="@+id/btn_yes"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/shape_tv_btn2"
            android:text="@string/notongguo"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <WebView
        android:id="@+id/wwv"
        android:layout_width="0dp"
        android:layout_height="0dp" />
</LinearLayout>