<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="105dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="3dp"
            android:paddingRight="3dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imageView_f"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="13dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView_f"
                android:layout_toEndOf="@+id/imageView_f"
                android:layout_toRightOf="@+id/imageView_f"
                android:maxLines="5"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/f_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView_f"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:text="@string/date"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView2"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_toLeftOf="@+id/textView2"
                android:layout_toStartOf="@+id/textView2"
                android:text="@string/author"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/f_date"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:layout_toLeftOf="@+id/f_date"
                android:layout_toStartOf="@+id/f_date"
                android:text="@string/g"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/assistor25" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#eeeeef" />
    </RelativeLayout>
</LinearLayout>