<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF4"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_area"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/assistor32"
        android:orientation="horizontal"
        android:paddingBottom="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:text="@string/qy"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_areas"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/assistor25"
            android:gravity="right|center"
            android:paddingBottom="5dp"
            android:paddingRight="16dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_class"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/assistor32"
        android:orientation="horizontal"
        android:paddingBottom="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:text="@string/bb"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_classs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:drawableRight="@drawable/assistor25"
            android:gravity="right|center"
            android:paddingBottom="5dp"
            android:paddingRight="16dp"
            android:textSize="15sp" />
    </LinearLayout>

    <cn.com.unilever.www.unileverapp.view.MyEdittext
        android:id="@+id/et_observe_person"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/assistor32"
        android:gravity="left"
        android:hint="@string/bgcr"
        android:maxLength="80"
        android:paddingBottom="5dp"
        android:paddingLeft="16dp"
        android:paddingRight="10dp"
        android:paddingTop="25dp"
        android:singleLine="false"
        android:textColorHint="#AAAAAA"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_begin"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/assistor31" />
</LinearLayout>